# QMatlab

./: CMakeLists.txt  README.md
_decrp/: matreader.cpp  matreader.h  matwriter.cpp  matwriter.h
install/include/: matutil.h
install/lib/: LibQMatlab.lib  LibQMatlabD.lib
source/: QMatlab.h  convertor.cpp  convertor.h  main.cpp  matutil.cpp
